--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,22 @@
-body{
+body {
   width: 100vw;
   overflow-x: hidden;
+}
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 1000ms ease-in;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 1000ms ease-out;
 }
