--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,182 +1,216 @@
-.footer{
-    padding: 32px 96px;  
-    display: flex;
-    flex-direction: column;
+.footer {
+  padding: 32px 32px 32px 96px;
+  display: flex;
+  flex-direction: column;
 }
 
-.footer-content{
-    display: flex;
-    justify-content: space-between;
-
-    border-top: 1px solid #E5E7E9;
-    border-bottom: 1px solid #E5E7E9;
-    padding: 64px 0;
+.footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  border-top: 1px solid #e5e7e9;
+  border-bottom: 1px solid #e5e7e9;
+  padding: 64px 0;
 }
 
-.footer-b2y{
-    width: 35%;
+.footer-b2y {
+  width: 40%;
 }
 
-.footer-logo{
-    font-size: 24px;
-    font-weight: 600;
-    cursor: pointer;
-    color: #000000;
-    letter-spacing: 2px;
+.footer-logo {
+  font-size: 24px;
+  font-weight: 600;
+  cursor: pointer;
+  color: #000000;
+  letter-spacing: 2px;
 }
-.footer-logo span{
-    color: tomato;
+.footer-logo span {
+  color: tomato;
 }
-.footer-b2y p{
-    font-size: 14px;
-    margin: 12px 0;
+.footer-b2y p {
+  font-size: 14px;
+  margin: 12px 0;
+  text-align: justify;
+  word-spacing: 1px;
 }
-.footer-social-links{
-    display: flex;
-    gap: 24px;
-    margin: 36px 0;
+.footer-social-links {
+  display: flex;
+  gap: 24px;
+  margin: 36px 0;
 }
-.footer-social-links span{
-    border: 2px solid #E2EAE8;
-    border-radius: 12px;
-    background-color: #FAF9F8;
-    padding: 12px;
-    box-shadow: 0px 4px 8px #E2EAE8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-size: 20px;
-    color: #000;
+.footer-social-links span {
+  border: 0.5px solid #e2eae8;
+  border-radius: 12px;
+  background-color: #fff;
+  padding: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 20px;
+  color: #000;
+  transition: all 400ms ease;
 }
-
-.footer-company,.footer-support{
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.footer-company h1, .footer-support h1{
-    font-size: 16px;
-    margin-bottom: 16px;
+.footer-social-links span:hover {
+  background-color: tomato;
+  color: #fff;
 }
 
-.footer-company p, .footer-support a{
-    color: #000000;
-    padding: 8px;
-    display: inline-block;
-    position: relative;
-    font-size: 14px;
+.footer-company,
+.footer-support {
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.footer-company p::after, .footer-support a::after{
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: tomato;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-}  
-  .footer-company p:hover::after, .footer-support a:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-
-  }
-  
-
-
-
-.copy-rights{
-    font-size: 20px;
-    text-align: center;
-    padding: 24px 0;
+.footer-address {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.copy-rights span{
-    color: tomato;
+.footer-company h1,
+.footer-support h1,
+.footer-address h1 {
+  font-size: 16px;
+  margin-bottom: 16px;
 }
-.arrow-up{
 
-    align-self: flex-end;
-    margin-right: 36px;
-    border: 2px solid #E2EAE8;
-    border-radius: 50%;
-    background-color: #FAF9F8;
-    padding: 12px;
-    box-shadow: 0px 4px 8px #E2EAE8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-size: 20px;
-    transition: transform 0.3s ease-in-out;
+.footer-company p,
+.footer-support a {
+  color: #000000;
+  padding: 8px;
+  display: inline-block;
+  position: relative;
+  font-size: 14px;
+}
+.footer-address address {
+  color: #000000;
+  padding: 8px;
+  display: inline-block;
+  position: relative;
+  font-size: 14px;
+  text-align: center;
+}
+.footer-company p::after,
+.footer-support a::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: tomato;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+.footer-company p:hover::after,
+.footer-support a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
+.copy-rights {
+  font-size: 14px;
+  text-align: center;
+  padding: 24px 0;
+}
+.copy-rights span {
+  color: tomato;
+}
+.arrow-up {
+  margin-left: auto;
+  margin-right: 36px;
+  border: 2px solid #e2eae8;
+  border-radius: 50%;
+  background-color: #ff6347;
+  padding: 12px;
+  box-shadow: 0px 4px 8px #e2eae8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-size: 20px;
+  transition: transform 0.3s ease-in-out;
+  color: #fff;
 }
 .arrow-up:hover {
-    transform: translateY(-5px); /* Adjust the distance for the hover effect */
+  transform: translateY(-5px); /* Adjust the distance for the hover effect */
+}
+
+@media screen and (max-width: 992px) {
+  .footer {
+    padding: 32px 32px 32px 32px;
+    display: flex;
+    flex-direction: column;
   }
-
-
-
-  @media screen and (max-width: 992px) {
-
+  .footer-b2y {
+    width: 100%;
   }
-
-
+  .footer-address {
+    width: 50%;
+  }
+  .footer-company {
+    width: 25%;
+  }
+  .footer-support {
+    width: 25%;
+  }
+  .footer-social-links {
+    justify-content: center;
+  }
+}
 
 @media screen and (max-width: 596px) {
-    .footer{
-        padding: 16px;  
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .footer-content{
-        display: flex;
-        flex-direction: column;
+  .footer {
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+  }
 
-        padding: 32px 0;
-    }
-    
-    .footer-b2y{
-        width: 100%;
-    }
-    
+  .footer-content {
+    display: flex;
+    flex-direction: column;
 
-    .footer-social-links{
-        width: 100%;
-        max-width: 250px;
-        display: flex;
-        justify-content: space-between;
-        margin: 36px auto;
-    }
-    .footer-social-links span{
-        font-size: 16px;
-    }
-    
-    .footer-company,.footer-support{
-        width: 100%;
-        margin: 32px 0;
-    }
-    
-    .footer-company h1, .footer-support h1{
-        font-size: 16px;
-        margin-bottom: 8px;
-    }
-    
+    padding: 32px 0;
+  }
 
-      
-    
-    
-    
-    .copy-rights{
-        font-size: 14px;
-        text-align: center;
-        padding: 24px 0;
-    }
-    .copy-rights span{
-        color: tomato;
-    }
+  .footer-b2y {
+    width: 100%;
+  }
+
+  .footer-social-links {
+    width: 100%;
+    max-width: 250px;
+    display: flex;
+    justify-content: space-between;
+    margin: 36px auto;
+  }
+  .footer-social-links span {
+    font-size: 16px;
+  }
+
+  .footer-company,
+  .footer-support,
+  .footer-address {
+    width: 100%;
+    max-width: 350px;
+    margin: 16px auto;
+  }
+
+  .footer-company h1,
+  .footer-support h1 {
+    font-size: 16px;
+    margin-bottom: 8px;
+  }
+
+  .copy-rights {
+    font-size: 12px;
+    text-align: center;
+    padding: 24px 0;
+  }
+  .copy-rights span {
+    color: tomato;
+  }
 }
