--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,197 +1,174 @@
-.heading{
-    color: #fff;
-    
+.heading {
+  color: #fff;
 }
-.heading h5{
-    font-weight: 400;
-    font-size: 20px;
+.heading h5 {
+  font-weight: 400;
+  font-size: 20px;
 }
-.heading h1{
-    font-size: 40px;
-    margin: 4px 0px;
+.heading h1 {
+  font-size: 40px;
+  margin: 4px 0px;
 }
-.heading h3{
-    text-align: right;
-    font-size: 22px;
-    font-weight: 400;
-    margin: 4px 0px 12px 0px;
+.heading h3 {
+  text-align: right;
+  font-size: 22px;
+  font-weight: 400;
+  margin: 4px 0px 12px 0px;
 }
 
 .typewriter-text {
-    overflow: hidden; /* Ensures the text is not visible outside the containing element */
-    border-right: 0.15em solid #fff; /* Cursor effect using a border */
-    white-space: nowrap; /* Prevents text from wrapping */
-    margin: 0 auto; /* Center the text horizontally */
-  }
-
-  /* Animation and keyframes for the typewriter effect */
-  @keyframes typing {
-    from { width: 0; }
-    to { width: 100%; }
-  }
-
-  /* Apply the animation to the typewriter text */
-  .typewriter-text::after {
-    content: ""; /* Cursor blinking effect */
-    display: inline-block;
-    vertical-align: bottom;
-    animation: blink-caret 6s infinite;
-  }
-
-  @keyframes blink-caret {
-    from, to { border-color: transparent; }
-    50% { border-color: orange; }
-  }
-
-  /* Apply the typing animation to the text */
-  .typewriter-text {
-    animation: typing 4s steps(40, end) 1;
-  }
-
-  .home-buttons{
-    display: flex;
-    justify-content: center;
-    gap: 32px;
-  }
-  .home-buttons button{
-    padding: 12px 24px;
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    transition: background-color 1.2s ease;
-    font-weight: bold;
-    font-size: 16px;
-    letter-spacing: 2px;
-
-  }
-
-  .lets-talk{
-    background-color: #fff;
-  }
-  .lets-talk:hover{
-    background-color: aqua;
-  }
-  .explore-us{
-    background-color: aqua;
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 5px;
-    transition: transform 0.3s ease-in-out;
-  }
-  .explore-us:hover{
-    background-color: #fff;
-  }
-  
-  .explore-us:hover .arrow-icon {
-    transform: translateY(5px); /* Adjust the distance as needed */
-  }
-
-
-
-  .why-choose-us{
-    padding: 24px;
-    padding-top: 72px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 24px;
-    text-align: center;
-    /* background-image: linear-gradient(to right,#E6E6FA, #F8F8FF,#FFFFFF); */
-    background-color: #fff;
-
-  }
-
-
-  .why-choose-us-head{
-    width: 90%;
-    max-width: 600px;
-  }
-   .why-choose-us-description{
-    font-size: 16px;
-    width: 90%;
-    max-width: 600px;
-    margin-bottom: 36px;
-  }
-
-  .why-choose-us-cards{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Three columns with equal width */
-    gap: 48px;
-    width: 90%;
-  }
-
-  .why-choose-us-card{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    border-radius: 24px;
-    text-align: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    border-bottom: 8px solid #2488EB;
-    padding: 24px 48px;
-    margin-bottom: 48px;
-
-  }
-  .why-choose-us-card h3{
-    width: 100%;
-    font-size: 20px;
-  }
-  .why-choose-us-card p{
-    font-size: 16px;
-    text-align: center;
-    width: 100%;
-    margin-bottom: 0;
-  }
-
-
-@media screen and (max-width: 992px){
-  
-  .why-choose-us-head{
-    font-size: 26px;
-  }
-  .why-choose-us-description{
-    font-size: 18px;
-  }
-  .why-choose-us-cards{
-    gap: 24px;
-  }
-  .why-choose-us-card{
-    margin-bottom: 24px;
-  }
-  .why-choose-us-card h3{
-    font-size: 18px;
-  }
-  .why-choose-us-card p{
-    font-size: 14px;
-  }
-
-
+  overflow: hidden; /* Ensures the text is not visible outside the containing element */
+  border-right: 0.15em solid #fff; /* Cursor effect using a border */
+  white-space: nowrap; /* Prevents text from wrapping */
+  margin: 0 auto; /* Center the text horizontally */
 }
 
+/* Animation and keyframes for the typewriter effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* Apply the animation to the typewriter text */
+.typewriter-text::after {
+  content: ""; /* Cursor blinking effect */
+  display: inline-block;
+  vertical-align: bottom;
+  animation: blink-caret 6s infinite;
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
+}
+
+/* Apply the typing animation to the text */
+.typewriter-text {
+  animation: typing 4s steps(40, end) 1;
+}
+
+.home-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+}
+.home-buttons button {
+  padding: 12px 24px;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 1.2s ease;
+  font-size: 16px;
+}
+
+.lets-talk {
+  background-color: #fff;
+  color: #ff6347;
+}
+.lets-talk:hover {
+  background-color: #ff6347;
+  color: #fff;
+  transition: all 0.2s ease-in-out;
+}
+.explore-us {
+  background-color: #ff6347;
+  color: #fff;
+  display: inline-block;
+  vertical-align: middle;
+  transition: transform 0.1s ease-in-out;
+}
+.arrow-icon {
+  /* rotate: -90deg; */
+  padding-left: 3px;
+  margin-left: 6px;
+}
+.explore-us:hover .arrow-icon {
+  transform: translateY(5px); /* Adjust the distance as needed */
+}
+
+.why-choose-us {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  text-align: center;
+  /* background-image: linear-gradient(to right,#E6E6FA, #F8F8FF,#FFFFFF); */
+  background-color: #fff;
+}
+
+.why-choose-us-head {
+  width: 90%;
+  max-width: 600px;
+}
+.why-choose-us-description {
+  font-size: 1rem;
+  width: 90%;
+  max-width: 600px;
+  margin-bottom: 36px;
+  color: #777;
+}
+
+.choose-us-card {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.heading_text {
+  color: #222222;
+  font-weight: 600;
+  font-size: 1.3rem;
+  margin-bottom: 10px;
+}
+.description_text {
+  color: #777;
+  width: 90%;
+  font-size: 1rem;
+  font-weight: 400;
+}
+/* .chrono-cont {
+  height: auto;
+  border: 1px solid red;
+} */
+
+@media screen and (max-width: 992px) {
+  .why-choose-us-head {
+    font-size: 26px;
+  }
+  .why-choose-us-description {
+    font-size: 18px;
+  }
+}
 
 @media screen and (max-width: 596px) {
-  .heading h5{
+  .heading h5 {
     font-size: 10px;
   }
-  .heading h1{
+  .heading h1 {
     font-size: 24px;
   }
-  .heading h3{
+  .heading h3 {
     font-size: 14px;
   }
-  .home-buttons button{
+  .home-buttons button {
     padding: 8px;
     cursor: pointer;
     border: none;
     border-radius: 4px;
     transition: background-color 1.2s ease;
-    font-weight: bold;
     font-size: 12px;
-
   }
-
-  .why-choose-us{
+  .why-choose-us {
     padding: 16px;
     padding-top: 72px;
     display: flex;
@@ -202,36 +179,26 @@
     /* background-image: linear-gradient(to right,#E6E6FA, #F8F8FF,#FFFFFF); */
     background-color: #fff;
   }
-  .why-choose-us-head{
+  .why-choose-us-head {
     font-size: 24px;
   }
-  .why-choose-us-description{
+  .why-choose-us-description {
     font-size: 16px;
   }
-
-  .why-choose-us-cards{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr); /* Three columns with equal width */
+  .description_text {
+    color: #777;
     width: 100%;
+    font-size: 1rem;
+    font-weight: 400;
   }
-  .why-choose-us-card{
-    width: 100%;
-    display: flex;
-    flex-direction: column; 
-    border-radius: 24px;
-    text-align: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    border-bottom: 8px solid #2488EB;
-    padding: 24px 12px;
-    margin-bottom: 12px;
-    
+  .fUSemk {
+    font-size: 0.9rem !important;
+    padding: 0px !important;
   }
-  .why-choose-us-card h3{
-    font-size: 16px;
-  }
-  .why-choose-us-card p{
-    font-size: 12px;
-  }
+}
 
-  
+@media screen and (max-width: 375px) {
+  .fUSemk {
+    font-size: 0.8rem !important;
+  }
 }
