--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -42,150 +42,12 @@
   transition: transform 0.3s ease-in-out;
 }
 .arrow-button:hover {
-  background-color: #ff6347;
+  background-color: #2e3192;
   color: #fff;
   transition: all 0.2s ease-in-out;
 }
 .arrow-button:hover .arrow-icon {
   transform: translateY(5px); /* Adjust the distance as needed */
-}
-
-.vision,
-.mission {
-  width: 100vw;
-  display: flex;
-  margin: 70px 0;
-}
-.vision-content,
-.mission-content {
-  width: 50%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-}
-.vision-content h1,
-.mission-content h1 {
-  font-size: 40px;
-}
-.vision-content h5,
-.mission-content h5 {
-  color: #adadad;
-}
-.vision-content p,
-.mission-content p {
-  font-size: 16px;
-  margin-top: 12px;
-}
-
-.vision-image,
-.mission-image {
-  width: 35%;
-  margin: auto;
-}
-.vision-image img {
-  border: 1px solid #000;
-  width: 100%;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 5%;
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 5%;
-}
-.mission-image img {
-  width: 100%;
-  border: 1px solid #000;
-  border-top-right-radius: 5%;
-  border-top-left-radius: 50%;
-  border-bottom-left-radius: 5%;
-  border-bottom-right-radius: 50%;
-}
-
-.mobile-about {
-  display: none;
-}
-
-.advantage {
-  background-image: url("../../assets/images/about_us.jpg");
-  height: auto;
-  width: 100%;
-  overflow-x: hidden;
-  background-size: cover;
-  display: flex;
-  justify-content: flex-start;
-}
-.advantage .background-dark {
-  width: 100%;
-  display: flex;
-  background: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 1),
-    rgba(0, 0, 0, 0.8),
-    transparent
-  );
-  justify-content: flex-start;
-}
-.advantage-content {
-  width: 50%;
-  color: #fff;
-  margin: 64px 36px;
-}
-.advantage-content h1 {
-  margin: 24px 0;
-  font-size: 20px;
-}
-.advantage-content p {
-  font-size: 14px;
-  text-align: center;
-}
-
-@media screen and (max-width: 992px) {
-  .vision-content,
-  .mission-content {
-    width: 50%;
-  }
-  .vision-content h1,
-  .mission-content h1 {
-    font-size: 36px;
-  }
-  .vision-content p,
-  .mission-content p {
-    font-size: 14px;
-  }
-
-  .vision-image,
-  .mission-image {
-    width: 40%;
-    margin: auto;
-  }
-  .vision-image img,
-  .mission-image img {
-    border-radius: 12px;
-  }
-
-  .mobile-about {
-    display: none;
-  }
-
-  .advantage .background-dark {
-    background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 1),
-      rgba(0, 0, 0, 1),
-      rgba(0, 0, 0, 0.8),
-      transparent
-    );
-  }
-  .advantage-content {
-    width: 75%;
-  }
-  .advantage-content h1 {
-    margin: 32px 0;
-    font-size: 24px;
-  }
-  .advantage-content p {
-    font-size: 16px;
-  }
 }
 
 @media screen and (max-width: 596px) {
@@ -207,49 +69,6 @@
   }
   .arrow-button {
     padding: 10px 20px;
-  }
-
-  .vision,
-  .mission {
-    flex-direction: column;
-    margin: 70px 0;
-  }
-  .vision-content,
-  .mission-content {
-    width: 90%;
-    margin: auto;
-  }
-  .vision-content h1,
-  .mission-content h1 {
-    font-size: 32px;
-  }
-  .vision-content h5,
-  .mission-content h5 {
-    color: #adadad;
-    font-size: 12px;
-  }
-  .vision-content p,
-  .mission-content p {
-    font-size: 14px;
-    margin-top: 0;
-  }
-
-  .vision-image,
-  .mission-image {
-    display: none;
-  }
-  .mobile-about {
-    display: flex;
-    width: 100%;
-    border-radius: 6px;
-    border: 1px solid #000;
-    margin: 12px 0;
-  }
-  .advantage .background-dark {
-    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8));
-  }
-  .advantage-content {
-    width: 100%;
   }
 }
 
@@ -343,163 +162,108 @@
     padding-bottom: 8px;
   }
 }
-.story_section {
+
+.storyContainer {
+  padding: 20px 40px;
   width: 100%;
-  object-fit: contain;
 }
-.story_container {
+.storySection {
+  display: flex;
   width: 100%;
-  position: relative;
-  margin-bottom: -2px;
+  gap: 20px;
+  margin-bottom: 30px;
 }
-.story_container img {
-  width: 100%;
-  object-fit: fill;
-  object-position: center;
+.story_img {
+  flex: 1;
 }
-.story_text {
-  position: absolute;
-  top: 0%;
-  padding: 80px;
+.story_img img {
+  border-radius: 12px 200px 12px 200px;
+  width: 760px;
+  height: 490px;
+}
+.storyText {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  gap: 30px;
 }
 .our_story_head {
-  color: #e4e4e4;
-  font-size: 3.2rem;
+  font-size: 3.5rem;
+  color: #2e3192;
 }
 .out_story_subheading {
-  font-size: 1.3rem;
-  color: #cacaca;
-  padding-bottom: 30px;
-  font-weight: 400;
+  color: #494949;
+  font-size: 1.1rem;
+  margin-left: 10px;
 }
 .our-story_para {
-  color: #c9c9c9;
-  width: 40%;
-  font-size: 1.2rem;
-  font-weight: 400;
-}
-.right_content {
-  position: absolute;
-  top: 0;
-  left: 55%;
-  padding: 100px 0;
-  font-size: 1.2rem;
-}
-.right_content .our-story_para {
+  color: #777;
+  font-size: 1rem;
   width: 80%;
-  padding-top: 30px;
+  margin-left: 10px;
 }
 @media screen and (max-width: 1024px) {
-  .story_text {
-    padding: 50px;
+  .story_img img {
+    border-radius: 12px;
+    width: 560px;
+    height: 390px;
   }
-  .our_story_head {
-    color: #e4e4e4;
-    font-size: 2rem;
-  }
-  .out_story_subheading {
-    font-size: 1.2rem;
+  .storyText {
+    gap: 10px;
   }
   .our-story_para {
-    width: 60%;
-    font-size: 1rem;
-  }
-  .right_content {
-    left: 45%;
-    padding: 30px 20px;
-  }
-  .right_content .our-story_para {
-    width: 90%;
-    padding-top: 30px;
+    color: #777;
+    width: 100%;
   }
 }
 @media screen and (max-width: 768px) {
-  .story_container img {
-    background-color: #000;
+  .storyContainer {
+    padding: 20px;
   }
-  .story_text {
-    width: 100%;
-    padding: 15px 30px;
+  .story_img img {
+    border-radius: 12px;
+    width: 350px;
+    height: 290px;
+  }
+  .our-story_para {
+    font-size: 0.9rem;
   }
   .our_story_head {
-    color: #e4e4e4;
     font-size: 2rem;
   }
   .out_story_subheading {
-    font-size: 1rem;
-    color: #cacaca;
-    padding-bottom: 10px;
-  }
-  .our-story_para {
-    color: #c9c9c9;
-    width: 80%;
-    font-size: 1rem;
-    font-weight: 400;
-  }
-  .right_content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 15px 30px;
-  }
-  .right_content .our-story_para {
-    width: 80%;
-    padding-top: 10px;
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
 }
 @media screen and (max-width: 425px) {
-  .story_container img {
-    height: 250px;
+  .storySection {
+    flex-direction: column;
   }
-  .story_text {
-    top: 0%;
-    padding: 8px;
+  .story_img {
+    flex: 1;
+  }
+  .story_img img {
+    border-radius: 12px;
+    width: 100%;
+  }
+  .storyText {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
   }
   .our_story_head {
-    color: #ffffff;
-    font-size: 1.3rem;
-    font-weight: 800;
+    font-size: 1.5rem;
+    color: #2e3192;
   }
   .out_story_subheading {
+    color: #494949;
     font-size: 0.9rem;
-    padding-bottom: 7px;
-    font-weight: 500;
   }
   .our-story_para {
-    color: #ffffff;
+    color: #777;
+    font-size: 0.9rem;
     width: 100%;
-    font-size: 0.87rem;
-    font-weight: 400;
-  }
-  .right_content {
-    top: 0%;
-    padding: 8px;
-  }
-  .right_content .our-story_para {
-    width: 100%;
-    padding-top: 7px;
-    font-size: 0.87rem;
-    font-weight: 400;
-    color: #ffffff;
-  }
-}
-@media screen and (max-width: 425px) {
-  .our-story_para {
-    color: #ffffff;
-    width: 100%;
-    font-size: 0.8rem;
-    font-weight: 400;
-  }
-
-  .right_content .our-story_para {
-    width: 100%;
-    padding-top: 7px;
-    font-size: 0.8rem;
-    font-weight: 400;
-    color: #ffffff;
   }
 }
 
@@ -516,7 +280,7 @@
 }
 .what_we_offer_heading {
   font-size: 2.5rem;
-  color: #222222;
+  color: #2e3192;
 }
 .what_we_offer_subheading {
   font-size: 1rem;
@@ -534,13 +298,12 @@
   text-align: center;
   padding: 20px 10px;
   border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px,
-    rgb(209, 213, 219) 0px 0px 0px 1px inset;
   cursor: pointer;
   transition: 0.2s ease-in-out;
+  border: 0.5px solid #bdbdbd;
 }
-.what_we_offer_card:hover {
-  box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+.what_we_offer_card {
+  font-weight: 500;
 }
 @media screen and (max-width: 1024px) {
   .what_we_offer_cards {
