--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -17,45 +17,59 @@
   width: 40%;
 }
 
-.footer-logo {
-  font-size: 24px;
-  font-weight: 600;
-  cursor: pointer;
-  color: #000000;
-  letter-spacing: 2px;
-}
-.footer-logo span {
-  color: tomato;
-}
 .footer-b2y p {
   font-size: 14px;
   margin: 12px 0;
   text-align: justify;
   word-spacing: 1px;
+  color: #777;
+  font-weight: 400;
+  font-size: 0.9rem;
 }
 .footer-social-links {
   display: flex;
   gap: 24px;
   margin: 36px 0;
 }
-.footer-social-links span {
-  border: 0.5px solid #e2eae8;
-  border-radius: 12px;
-  background-color: #fff;
-  padding: 12px;
+.footer-social-links a {
+  height: 50px;
+  width: 50px;
   display: flex;
-  justify-content: center;
   align-items: center;
-  cursor: pointer;
-  font-size: 20px;
-  color: #000;
-  transition: all 400ms ease;
+  justify-content: center;
+  border: 0.5px solid #e5e7e9;
+  border-radius: 100%;
 }
-.footer-social-links span:hover {
-  background-color: tomato;
+.instagram {
+  background: linear-gradient(310deg, #f9ce34, #ee2a7b, #6228d7);
   color: #fff;
 }
-
+.instagram .social_icons {
+  color: #fff;
+}
+.facebook {
+  background: linear-gradient(120deg, #0165e1, #17a9fd);
+}
+.facebook .social_icons {
+  color: #fff;
+}
+.linkedin {
+  background: #0077b5;
+}
+.linkedin .social_icons {
+  color: #fff;
+}
+.twitter {
+  background: #1da1f2;
+}
+.twitter .social_icons {
+  color: #fff;
+}
+.social_icons {
+  height: 22px;
+  width: 22px;
+  color: black;
+}
 .footer-company,
 .footer-support {
   width: 15%;
@@ -74,6 +88,7 @@
 .footer-address h1 {
   font-size: 16px;
   margin-bottom: 16px;
+  color: #2e3192;
 }
 
 .footer-company p,
@@ -101,7 +116,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: tomato;
+  background-color: #2e3192;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -117,14 +132,15 @@
   padding: 24px 0;
 }
 .copy-rights span {
-  color: tomato;
+  color: #ff6347;
+  font-weight: 500;
 }
 .arrow-up {
   margin-left: auto;
   margin-right: 36px;
   border: 2px solid #e2eae8;
   border-radius: 50%;
-  background-color: #ff6347;
+  background-color: #2e3192;
   padding: 12px;
   box-shadow: 0px 4px 8px #e2eae8;
   display: flex;
