--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -18,9 +18,15 @@
 
 .typewriter-text {
   overflow: hidden; /* Ensures the text is not visible outside the containing element */
-  border-right: 0.15em solid #fff; /* Cursor effect using a border */
+  border-right: 0.15em solid #30bebe; /* Cursor effect using a border */
   white-space: nowrap; /* Prevents text from wrapping */
   margin: 0 auto; /* Center the text horizontally */
+  background: linear-gradient(45deg, #2e3192, #1bffff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; /* Hide the original text color */
+  background-clip: text;
+  text-fill-color: transparent; /* Hide the original text color */
+  animation: gradientAnimation 5s infinite alternate; /* Optional animation */
 }
 
 /* Animation and keyframes for the typewriter effect */
@@ -53,7 +59,7 @@
 
 /* Apply the typing animation to the text */
 .typewriter-text {
-  animation: typing 4s steps(40, end) 1;
+  animation: typing 4s steps(120, end) 1;
 }
 
 .home-buttons {
@@ -72,15 +78,15 @@
 
 .lets-talk {
   background-color: #fff;
-  color: #ff6347;
+  color: #2e3192;
 }
 .lets-talk:hover {
-  background-color: #ff6347;
+  background-color: #2e3192;
   color: #fff;
   transition: all 0.2s ease-in-out;
 }
 .explore-us {
-  background-color: #ff6347;
+  background-color: #2e3192;
   color: #fff;
   display: inline-block;
   vertical-align: middle;
@@ -107,8 +113,10 @@
 }
 
 .why-choose-us-head {
+  font-size: 2.5rem;
   width: 90%;
   max-width: 600px;
+  color: #2e3192;
 }
 .why-choose-us-description {
   font-size: 1rem;
@@ -142,9 +150,6 @@
 } */
 
 @media screen and (max-width: 992px) {
-  .why-choose-us-head {
-    font-size: 26px;
-  }
   .why-choose-us-description {
     font-size: 18px;
   }
@@ -152,7 +157,7 @@
 
 @media screen and (max-width: 596px) {
   .heading h5 {
-    font-size: 10px;
+    font-size: 2.5rem;
   }
   .heading h1 {
     font-size: 24px;
@@ -179,9 +184,7 @@
     /* background-image: linear-gradient(to right,#E6E6FA, #F8F8FF,#FFFFFF); */
     background-color: #fff;
   }
-  .why-choose-us-head {
-    font-size: 24px;
-  }
+
   .why-choose-us-description {
     font-size: 16px;
   }
@@ -200,5 +203,13 @@
 @media screen and (max-width: 375px) {
   .fUSemk {
     font-size: 0.8rem !important;
+  }
+  .why-choose-us-head {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 425px) {
+  .why-choose-us-head {
+    font-size: 2rem;
   }
 }
