--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -4,11 +4,14 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.5); /* Transparent white background */
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0
+  ) !important; /* Transparent white background */
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 9999; /* Ensure the loader appears on top of other content */
 }
-
-/* Add additional styling for your loading animation */
