--- a/src/components/explore/index.css
+++ b/src/components/explore/index.css
@@ -8,7 +8,7 @@
 }
 .explore_heading {
   font-size: 2.5rem;
-  color: #222222;
+  color: #2e3192;
 }
 .explore_para {
   width: 70%;
@@ -19,7 +19,7 @@
   margin-bottom: 20px;
 }
 .color {
-  color: #ff6347;
+  color: #20d3d3;
   margin-left: 2px;
 }
 
@@ -28,7 +28,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 30px;
+  padding: 30px 30px;
   margin: auto;
 }
 .explore_section_container .left_card {
@@ -54,7 +54,7 @@
 }
 .content {
   position: absolute;
-  bottom: -360px;
+  bottom: -345px;
   height: 100%;
   width: 100%;
   transition: all 0.5s ease-in-out;
@@ -66,16 +66,16 @@
   transition: 0.6s;
 }
 .content_heading {
-  background-color: rgba(135, 206, 250, 0.9);
+  background-color: rgba(46, 49, 146, 0.9);
   width: 100%;
   padding: 20px;
-  color: #ffff;
+  color: #20d3d3;
   text-transform: uppercase;
   transition: all 0.6s ease-in-out;
   font-size: 1.2rem;
 }
 .explore_section_container .left_card .card:hover .content {
-  background-color: rgba(135, 206, 250, 0.4);
+  background-color: rgba(46, 49, 146, 0.9);
   bottom: 0;
 }
 .explore_section_container .left_card .card:hover img {
@@ -86,12 +86,12 @@
 }
 .explore_section_container .left_card .card:hover .content_heading {
   background-color: transparent;
-  color: #ffff;
+  color: #20d3d3;
 }
 .content_para {
   padding: 20px;
   color: #ffff;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 .explore-btn:hover .hover-effect {
   transform: translateX(5px);
@@ -110,6 +110,7 @@
   width: 50%;
 }
 .explore_section_container .right_card .card img {
+  object-fit: cover;
   width: 457px;
   height: 305px;
   max-height: 610px; /* Limit image height */
@@ -120,7 +121,7 @@
 
 .explore_section_container .right_card .card .content {
   position: absolute;
-  bottom: -182px;
+  bottom: -179px;
   height: 100%;
   width: 100%;
   transition: all 0.5s ease-in-out;
@@ -131,9 +132,10 @@
   justify-content: center;
 }
 .explore_section_container .right_card .card:hover .content {
-  background-color: rgba(135, 206, 250, 0.7);
+  background-color: rgba(46, 49, 146, 0.9);
   bottom: 0;
   transition: 0.6s ease-in-out;
+  color: #20d3d3;
 }
 .explore_section_container .right_card .card:hover img {
   transform: scale(1.1);
@@ -142,12 +144,24 @@
 .explore_section_container .right_card .card:hover .content_heading {
   background-color: transparent;
 }
+
+@media screen and (max-width: 1440px) {
+  .explore_section_container .left_card .card .content {
+    bottom: -355px;
+  }
+  .explore_section_container .right_card .card .content {
+    bottom: -178px;
+  }
+}
 @media screen and (max-width: 1024px) {
   .explore_section_container .left_card .card .content {
-    bottom: -400px;
+    bottom: -385px;
   }
   .explore_section_container .right_card .card .content {
     bottom: -220px;
+  }
+  .explore_section_container .right_card .card img {
+    object-fit: fill;
   }
 }
 @media screen and (max-width: 768px) {
@@ -198,6 +212,7 @@
   .explore_section_container .right_card .card img {
     width: 100%;
     flex-direction: column;
+    object-fit: cover;
   }
   .explore_section_container .left_card .card .content {
     bottom: -405px;
@@ -206,7 +221,7 @@
     margin-bottom: 5px;
   }
   .explore_section_container .right_card .card .content {
-    bottom: -162px;
+    bottom: -189px;
   }
   .explore_para {
     font-size: 1rem;
@@ -226,5 +241,13 @@
   .explore_para {
     font-size: 1rem;
     width: 100%;
+  }
+  .explore_heading {
+    font-size: 1.5rem;
+  }
+}
+@media screen and (max-width: 425px) {
+  .explore_heading {
+    font-size: 2rem;
   }
 }
