--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -230,3 +230,13 @@
     color: tomato;
   }
 }
+@media screen and (max-width: 425px) {
+  .footer-social-links {
+    display: flex;
+    align-items: center;
+  }
+  .footer-social-links a {
+    height: 45px;
+    width: 45px;
+  }
+}
