--- a/src/components/Contact/index.css
+++ b/src/components/Contact/index.css
@@ -151,6 +151,15 @@
   padding: 12px;
   width: 100%;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 .contact-us-right form input,
 .contact-us-right form textarea:focus {
   outline: none;
